update plugin config
